src/objects/Ruffle_Draw__c.object
<CustomObject>
    <fields>
        <fullName>Complete_Flag__c</fullName>
        <formula>Winners__c &lt;= Number_of_Winers_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draw_Date__c</fullName>
        <label>Draw Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Winers_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Winers Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Winners__c</fullName>
        <label>Number of Winers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Raffle Draw</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Service_Case_Ruffle_Draw</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Case</label>
        <queue>Service_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Ruffle Draw Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ruffle Draws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>